--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<a href="https://raw.githubusercontent.com/uaadesanarea8/downloads/refs/heads/main/LOGO%20UAADESAN.PNG" download="logo-uaadesan.png">
+<a href="https://raw.githubusercontent.com/uaadesanarea8/downloads/refs/heads/main/LOGO%20UAADESAN.PNG" download="">
   <img src="https://raw.githubusercontent.com/uaadesanarea8/downloads/refs/heads/main/LOGO%20UAADESAN.PNG" alt="LOGO UAADESAN" width=auto height="50">
 </a>
 
