--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 
-<a href="https://raw.githubusercontent.com/uaadesanarea8/downloads/refs/heads/main/LOGO%20UAADESAN.PNG" download>
-  <img src="https://raw.githubusercontent.com/uaadesanarea8/downloads/refs/heads/main/LOGO%20UAADESAN.PNG" alt="LOGO UAADESAN" width=auto height="50">
+<a href="/LOGO UAADESAN.PNG" download>
+  <img src="/LOGO UAADESAN.PNG" alt="LOGO UAADESAN" width=auto height="50">
 </a>
 
 </body>
