--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 
-<a href="/LOGO UAADESAN.PNG" download>
-  <img src="/LOGO UAADESAN.PNG" alt="LOGO UAADESAN" width=auto height="50">
+<a href="/downloads/LOGO UAADESAN.PNG" download>
+  <img src="/downloads/LOGO UAADESAN.PNG" alt="LOGO UAADESAN" width=auto height="50">
 </a>
 
 </body>
