--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
    <div><a href="/downloads/LOGO UAADESAN.PNG" download><span></span><img src="/downloads/LOGO UAADESAN.PNG" alt="1" width="170" height="128" /></a></div>
    
-   <div><a href="#"><span></span><img src="#" alt="2" width="165" height="145" /></a></div>
+   <div><a href="#"><span></span><img src="#" alt="2" width="auto" height="150" /></a></div>
 
-   <div><a href="#"><span></span><img src="#" alt="m3" width="136" height="170" /></a></div>
+   <div><a href="#"><span></span><img src="#" alt="3" width="136" height="170" /></a></div>
 
    <div><a href="#"><span></span><img src="#" alt="4" width="160" height="162" /></a></div>
 
