--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <div class="wrap">
 
-   <div><a href="/downloads/LOGO UAADESAN.PNG" download><span></span><img src="/downloads/LOGO UAADESAN.PNG" alt="1" width="170" height="128" /></a></div>
+   <div><a href="/downloads/LOGO UAADESAN.PNG" download><span></span><img src="/downloads/LOGO UAADESAN.PNG" alt="1" width="auto" height="150" /></a></div>
    
    <div><a href="#"><span></span><img src="#" alt="2" width="auto" height="150" /></a></div>
 
