--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <p></p>
 <div class="wrap">
    <div><a href="/downloads/LOGO AD 2025.png" download><span></span><img src="/downloads/LOGO AD 2025.png" alt="1" width="auto" height="150" /></a></div>   
-   <div><a href="/downloads/LOGO CIRCULO DE ORACAO.png"><span></span><img src="/downloads/LOGO CIRCULO DE ORACAO.png" alt="2" width="auto" height="150" /></a></div>
-   <div><a href="/downloads/LOGO EBD.png"><span></span><img src="/downloads/LOGO EBD.png" alt="3" width="auto" height="150" /></a></div>
-   <div><a href="/downloads/LOGO EBL.png"><span></span><img src="/downloads/LOGO EBL.png" alt="4" width="auto" height="150" /></a></div>
-   <div><a href="/downloads/LOGO PROJETO SIMEAO.PNG"><span></span><img src="/downloads/LOGO PROJETO SIMEAO.PNG" alt="5" width="auto" height="150" /></a></div>
-   <div><a href="/downloads/LOGO UAADESAN.PNG"><span></span><img src="/downloads/LOGO UAADESAN.PNG" alt="6" width="auto" height="150" /></a></div>
-   <div><a href="/downloads/LOGO UCADES.png"><span></span><img src="/downloads/LOGO UCADES.png" alt="7" width="auto" height="150" /></a></div>
-   <div><a href="/downloads/LOGO UMADES.png"><span></span><img src="/downloads/LOGO UMADES.png" alt="8" width="auto" height="150" /></a></div>
-   <div><a href="/downloads/LOGOTIPO ATAQUE TOTAL.png"><span></span><img src="/downloads/LOGOTIPO ATAQUE TOTAL.png" alt="9" width="auto" height="150" /></a></div>
+   <div><a href="/downloads/LOGO CIRCULO DE ORACAO.png" download><span></span><img src="/downloads/LOGO CIRCULO DE ORACAO.png" alt="2" width="auto" height="150" /></a></div>
+   <div><a href="/downloads/LOGO EBD.png" download><span></span><img src="/downloads/LOGO EBD.png" alt="3" width="auto" height="150" /></a></div>
+   <div><a href="/downloads/LOGO EBL.png" download><span></span><img src="/downloads/LOGO EBL.png" alt="4" width="auto" height="150" /></a></div>
+   <div><a href="/downloads/LOGO PROJETO SIMEAO.PNG" download><span></span><img src="/downloads/LOGO PROJETO SIMEAO.PNG" alt="5" width="auto" height="150" /></a></div>
+   <div><a href="/downloads/LOGO UAADESAN.PNG" download><span></span><img src="/downloads/LOGO UAADESAN.PNG" alt="6" width="auto" height="150" /></a></div>
+   <div><a href="/downloads/LOGO UCADES.png" download><span></span><img src="/downloads/LOGO UCADES.png" alt="7" width="auto" height="150" /></a></div>
+   <div><a href="/downloads/LOGO UMADES.png" download><span></span><img src="/downloads/LOGO UMADES.png" alt="8" width="auto" height="150" /></a></div>
+   <div><a href="/downloads/LOGOTIPO ATAQUE TOTAL.png" download><span></span><img src="/downloads/LOGOTIPO ATAQUE TOTAL.png" alt="9" width="auto" height="150" /></a></div>
 </div>
 </body>
 </html>
